1. Fixed isZoomed -> Click on menu bug. Culprit - overlay wasn't unmounted when menu opens. 2. Minor bug fixes (NextLevelButton with delay, redid Cloud_Reg_11 img as it was clipped too)

--- a/src/components/game/Cloud/Cloud.module.css
+++ b/src/components/game/Cloud/Cloud.module.css
@@ -28,6 +28,7 @@
   height: 100%;
   pointer-events: none;
   z-index: 5;
+    overflow: visible;
 }
 
 /* For CloudB2 */
@@ -52,6 +53,7 @@
 .translucentCloudImage {
   opacity: 0.6;
   z-index: 7;
+    overflow: visible;
 }
 
 .underLayer {
@@ -61,7 +63,7 @@
 .floatingCloud {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: fill;
 }
 
 .textContent {
