--- a/src/components/screens/MainMenu/MainMenu.module.css
+++ b/src/components/screens/MainMenu/MainMenu.module.css
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 10090;
 }
 
 .mainMenu_container {
