--- a/src/components/ui/GameGUI/GameGUI.module.css
+++ b/src/components/ui/GameGUI/GameGUI.module.css
@@ -5,7 +5,7 @@
   right: 0;
   bottom: 0;
   pointer-events: none;
-  z-index: 1000;
+  z-index: 1100;
 }
 
 .hintsSection {
@@ -26,6 +26,7 @@
   /* right: clamp(var(--space-4-8px), 1.5vw, var(--space-8-12px)); */
   pointer-events: auto;
   /* cursor: pointer; */
+  z-index: 1200;
 }
 
 .nextLevelSection {
